# task_c

./: CMakeLists.txt  README.md  main.c
.github/workflows/: CI.yml
Tests/: CMakeLists.txt  tests.cpp
area_lib/: CMakeLists.txt  area.c  area.h  area_lib.c  area_lib.h
area_lib/area_lib/: area_lib.h
